# networks2020

./: .gitignore  README.md  notes.md
checker/: checker.py
code/: CMakeLists.txt
code/goc/include/goc/collection/: bitset_utils.h  collection_utils.h  vector_map.h
code/goc/include/goc/log/: bcp_execution_log.h
code/goc/include/goc/math/: number_utils.h
code/goc/src/linear_programming/cplex/: cplex_solver.cpp  cplex_wrapper.cpp
code/goc/src/log/: bcp_execution_log.cpp
code/goc/src/math/: linear_function.cpp
code/include/: bcp.h  bidirectional_labeling.h  label.h  lazy_label.h  monodirectional_labeling.h  preprocess_service_waiting.h  preprocess_time_windows.h  preprocess_triangle_depot.h  pricing_problem.h  pwl_domination_function.h  spf.h  vrp_instance.h
code/include/bcp/: bcp.h  pricing_problem.h  spf.h
code/include/labeling/: bidirectional_labeling.h  label.h  lazy_label.h  monodirectional_labeling.h
code/include/preprocess/: preprocess_capacity.h  preprocess_travel_times.h
code/include/tdcarp/: transform_problem.h
code/src/: bcp.cpp  bidirectional_labeling.cpp  label.cpp  lazy_label.cpp  main_bp.cpp  main_pricing.cpp  main_tdcarp.cpp  monodirectional_labeling.cpp  preprocess_capacity.cpp  preprocess_service_waiting.cpp  preprocess_time_windows.cpp  preprocess_travel_times.cpp  preprocess_triangle_depot.cpp  pricing_problem.cpp  pwl_domination_function.cpp  spf.cpp  vrp_instance.cpp
code/src/bcp/: bcp.cpp  pricing_problem.cpp  spf.cpp
code/src/labeling/: bidirectional_labeling.cpp  label.cpp  lazy_label.cpp  monodirectional_labeling.cpp  pwl_domination_function.cpp
code/src/preprocess/: preprocess_capacity.cpp  preprocess_service_waiting.cpp  preprocess_time_windows.cpp  preprocess_travel_times.cpp  preprocess_triangle_depot.cpp
code/src/tdcarp/: transform_problem.cpp
code/tst/: CMakeLists.txt  CMakeLists.txt.in.gtest  first_test.cpp
experiments/: bp.json  bp_heur.json  pricing.json  tdcarp.json
instances/dabia_et_al_2013/: C101_100.json  C101_25.json  C101_50.json  C102_100.json  C102_25.json  C102_50.json  C103_100.json  C103_25.json  C103_50.json  C104_100.json  C104_25.json  C104_50.json  C105_100.json  C105_25.json  C105_50.json  C106_100.json  C106_25.json  C106_50.json  C107_100.json  C107_25.json  C107_50.json  C108_100.json  C108_25.json  C108_50.json  C109_100.json  C109_25.json  C109_50.json  C201_100.json  C201_25.json  C201_50.json  C202_100.json  C202_25.json  C202_50.json  C203_100.json  C203_25.json  C203_50.json  C204_100.json  C204_25.json  C204_50.json  C205_100.json  (+130 more)
instances/networks_2019/: C101_100_A.json  C101_25_A.json  C101_50_A.json  C102_100_A.json  C102_100_B.json  (+388 more)
runner/: runner.py
(+119 files in other folders)
